<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activities.RecoverPasswordActivity"
    android:layout_margin="20dp">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/logo"
        android:layout_marginTop="60dp"
        android:layout_gravity="center_horizontal"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txtForgot"
        android:gravity="center"
        android:layout_marginTop="60dp"
        android:textSize="22dp"
        android:textColor="@color/colorPrimaryDark"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txtInstruction"
        android:gravity="center"
        android:layout_marginTop="20dp"
        android:textSize="16dp"
        android:textColor="@color/colorPrimaryDark"/>

    <com.wrapp.floatlabelededittext.FloatLabeledEditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:fletPaddingBottom="10dp"
        android:layout_marginTop="40dp">
        >

        <EditText
            android:id="@+id/etEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Email"
            android:inputType="textPassword" />
    </com.wrapp.floatlabelededittext.FloatLabeledEditText>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/btnResetPswd"
        android:text="@string/resetPswd"
        android:layout_marginTop="40dp"
        android:textSize="20dp"
        android:background="@color/colorAccent"
        android:textColor="@color/fillcolor"
        />

    <TextView
        android:id="@+id/txtBack"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txtBack"
        android:gravity="center"
        android:layout_marginTop="20dp"
        android:textSize="22dp"
        android:textColor="@color/colorPrimaryDark"/>

</LinearLayout>