<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:layout_marginBottom="5dp"
            android:gravity="center"
            android:text="Powered by Telogix Private Limited"
            android:textColor="@android:color/black"
             />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/mainLL"
    android:orientation="vertical"
    tools:context=".activities.LoginActivity"
    android:layout_margin="20dp">

        <ImageView
            android:layout_width="200dp"
            android:layout_height="100dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="60dp"
            android:src="@drawable/telogix_logo" />

        <TextView
            android:id="@+id/txtandroidID"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/mainLL"
            android:gravity="center"
            android:textColor="@android:color/black"
            android:textStyle="bold"
            android:textIsSelectable="true"/>

        <com.wrapp.floatlabelededittext.FloatLabeledEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            app:fletPaddingBottom="10dp">

            <EditText
                android:id="@+id/etName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Username" />
        </com.wrapp.floatlabelededittext.FloatLabeledEditText>

    <!-- password input -->
    <com.wrapp.floatlabelededittext.FloatLabeledEditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:fletPaddingBottom="10dp"
        android:layout_marginTop="10dp">

        <EditText
            android:id="@+id/etPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Password"
            android:inputType="textPassword"
             />
    </com.wrapp.floatlabelededittext.FloatLabeledEditText>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/btnLogin"
        android:text="@string/login"
        android:layout_marginTop="40dp"
        android:textSize="20dp"
        android:background="@color/colorAccent"
        android:textColor="@color/fillcolor"
        />

        <Button
            android:id="@+id/btnLogin2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@color/colorAccent"
            android:text="@string/signup"
            android:textColor="@color/fillcolor"
            android:textSize="20dp" />

        <TextView
        android:id="@+id/txtForgotPswd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txtForgot"
        android:gravity="center"
        android:layout_marginTop="20dp"
        android:textSize="18sp"
        android:textColor="@color/colorPrimaryDark"/>


</LinearLayout>

</RelativeLayout>