<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:android="http://schemas.android.com/apk/res/android">
 />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="15dp"
        android:background="@drawable/cardview_routes"
        android:elevation="2dp"
        android:orientation="vertical"
        android:padding="5dp"
        android:translationZ="2dp">

        <LinearLayout
            android:id="@+id/mainLL"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1.8"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imageView12"
                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    android:layout_gravity="center_vertical"
                    app:srcCompat="@drawable/icon_vehicle_small" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/txtVname"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingLeft="8dp"
                        android:textColor="@color/shelltxtColor"
                        android:textSize="18dp"
                        android:visibility="gone" />

                    <TextView
                        android:id="@+id/txtVnumber"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:maxLines="1"
                        android:paddingLeft="10dp"
                        android:text="@string/vnumber"
                        android:textColor="@color/shelltxtColor"
                        android:textSize="16dp" />

                    <TextView
                        android:id="@+id/txtVtype"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingLeft="10dp"
                        android:textColor="@color/colorPrimary"
                        android:textSize="16dp" />

                    <TextView
                        android:id="@+id/txtHaulierName"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingLeft="10dp"
                        android:textColor="@color/colorPrimary"
                        android:textSize="16dp" />

                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <!--<TextView-->
                    <!--android:id="@+id/txtVnumber"-->
                    <!--android:layout_width="wrap_content"-->
                    <!--android:layout_height="wrap_content"-->
                    <!--android:maxLines="1"-->
                    <!--android:paddingLeft="10dp"-->
                    <!--android:text="@string/vnumber"-->
                    <!--android:textColor="@color/colorPrimary"-->
                    <!--android:textSize="16dp" />-->

                <TextView
                    android:id="@+id/vehicleStatus"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:maxLines="1"
                    android:text="Load Assigned"
                    android:textColor="@color/colorPrimary"
                    android:textSize="16dp" />

                <Button
                    android:id="@+id/btnAction"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="5dp"
                    android:padding="2dp"

                    android:background="@color/colorAccent"
                    android:text="@string/action"
                    android:textAllCaps="true"
                    android:textColor="@color/fillcolor" />

                <Button
                    android:id="@+id/btnInspect"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="5dp"
                    android:background="@color/colorAccent"
                    android:text="@string/inspect"
                    android:textAllCaps="true"
                    android:textColor="@color/fillcolor"
                    android:visibility="visible" />
            </LinearLayout>


        </LinearLayout>

        <View
            android:id="@+id/view"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/gray" />

        <LinearLayout
            android:id="@+id/layoutoptions"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="3dp"
            android:orientation="horizontal">

            <LinearLayout
                android:id="@+id/layoutbriefing"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="fill"
                android:layout_weight="1"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/imgbriefing"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_gravity="center"
                    android:background="@drawable/icon_briefsmall"
                    android:backgroundTint="@android:color/darker_gray" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="Briefing"
                    android:textSize="12sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/laayoutinspection"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="fill"
                android:layout_weight="1"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/imginspection"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_gravity="center"
                    android:background="@drawable/icon_inpect_small"
                    android:backgroundTint="@android:color/darker_gray" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="Inspection"
                    android:textSize="12sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/layoutroute"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="fill"
                android:layout_weight="1"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/imgroute"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_gravity="center"
                    android:background="@drawable/icon_assignrad_small"
                    android:backgroundTint="@android:color/darker_gray" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="Route"
                    android:textSize="12sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/layoutload"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="fill"
                android:layout_weight="1"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/imgload"
                    android:layout_width="24dp"
                    android:layout_height="36dp"
                    android:layout_gravity="center"
                    android:background="@drawable/icon_assignload_small"
                    android:backgroundTint="@android:color/darker_gray" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="load"
                    android:textSize="12sp" />
            </LinearLayout>
        </LinearLayout>

    </LinearLayout>


</LinearLayout>